Moved compton.conf and added couple scripts

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -14,13 +14,13 @@ no-dnd-shadow = true;   # Don't draw shadows on drag-and-drop windows
 # shadow-ignore-shaped = false;
 
 # [heavy shadow]
-shadow-offset-x = -36;
-shadow-offset-y = -4;
-shadow-radius = 24;
-shadow-opacity = 0.5;
-shadow-red = 0.0;
-shadow-blue = 0.0;
-shadow-green = 0.0;
+#shadow-offset-x = -36;
+#shadow-offset-y = -4;
+#shadow-radius = 24;
+#shadow-opacity = 0.5;
+#shadow-red = 0.0;
+#shadow-blue = 0.0;
+#shadow-green = 0.0;
 
 # [fading]
 # Fading transitions
