--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -35,14 +35,14 @@ foreground = ${colors.foreground}
 font-0 = Roboto:pixelsize=9;2
 font-1 = "3270Medium Nerd Font:style=Medium:size=11;3"
 
-modules-left = arrow0 i3index arrow
+modules-left = arrow0 i3 arrow
 modules-center = music
-; TODO: add "backlight"
 modules-right = arrow8 xkeyboard arrow7 memory arrow6 cpu arrow7 battery arrow6 volume arrow7 date arrow6
 
 tray-position = right
 tray-background = ${colors.background}
 tray-padding = 8
+
 
 ;-------------------------------------------------------------------------------
 ;	D E C O R A T I O N S
@@ -123,24 +123,6 @@ content-background = ${colors.trans}
 ;	M O D U L E S
 ;-------------------------------------------------------------------------------
 
-[module/backlight]
-type = internal/xbacklight
-output = eDP1
-enable-scroll = true
-; Available tags:
-;   <label> (default)
-;   <ramp>
-;   <bar>
-format =   <label><ramp>
-label = %percentage%%
-
-; Only applies if <ramp> is used
-ramp-0 = 🌕
-ramp-1 = 🌔
-ramp-2 = 🌓
-ramp-3 = 🌒
-ramp-4 = 🌑
-
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
@@ -153,7 +135,8 @@ label-layout = %layout%
 label-layout-foreground = ${colors.blue}
 label-layout-background = ${colors.background}
 
-[module/i3index]
+
+[module/i3]
 type = internal/i3
 format = <label-state>
 
@@ -192,52 +175,6 @@ label-foreground = ${colors.pink}
 label-background = ${colors.grey}
 
 
-[module/wlan]
-type = internal/network
-interface = 
-interval = 3.0
-
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
-label-connected = %essid%
-
-;format-disconnected =
-format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 = 1
-ramp-signal-1 = 2
-ramp-signal-2 = 3
-ramp-signal-3 = 4
-ramp-signal-4 = 5
-
-;ramp-signal-0 = 
-;ramp-signal-1 = 
-;ramp-signal-2 = 
-;ramp-signal-3 = 
-;ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
-
-
-[module/eth]
-type = internal/network
-interface =
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-;format-disconnected =
-format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-
 [module/date]
 type = internal/date
 interval = 5
@@ -251,9 +188,9 @@ label-background = ${colors.grey}
 
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 
-; mapping = true
+ mapping = true
 format-volume = <ramp-volume><label-volume>
 master-soundcard = default
 speaker-soundcard = default
@@ -316,34 +253,15 @@ animation-charging-3 =
 animation-charging-4 = 
 animation-charging-framerate = 750
 
-[module/powermenu]
-type = custom/menu
 
-format-spacing = 1
-
-label-open = 
-label-open-foreground = ${colors.secondary}
-label-close =  cancel
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
-
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+[settings]
+screenchange-reload = true
 
 
+; ############################################################
+; Unused
+; ############################################################
+;
 [module/music]
 type = custom/script
 interval = 1
@@ -351,16 +269,25 @@ interval = 1
 label = %output:0:45:...%
 ;exec = ~/comfy_guration/scripts/polybar/poly_music.sh
 
+[module/powermenu]
+type = custom/menu
+expand-right = false
 
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
+label-open = "    "
+label-close = "      "
+label-close-foreground = ${colors.foreground-alt}
+label-separator = •
 
-[global/wm]
-margin-top = 5
-margin-bottom = 5
+menu-0-0 = "  "
+menu-0-0-exec = systemctl reboot
+menu-0-1 = "    "
+menu-0-1-exec = systemctl poweroff
+menu-0-2 = "    "
+menu-0-2-exec = i3-msg exit
+menu-0-3 = "    "
+menu-0-3-exec = systemctl hibernate
+menu-0-4 = "    "
+menu-0-4-exec = i3lock-fancy
 
-; vim:ft=dosini
+
+
