--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -26,7 +26,7 @@ red = #ee3333
 width = 100%
 height = 16
 radius = 1.0
-padding-left = 5
+padding-left = 1
 fixed-center = true
 
 background = ${colors.trans}
@@ -34,8 +34,9 @@ foreground = ${colors.foreground}
 
 font-0 = Roboto:pixelsize=9;2
 font-1 = "3270Medium Nerd Font:style=Medium:size=11;3"
+font-2 = Roboto:pixelsize=9:weight=bold;2
 
-modules-left = arrow0 i3 arrow
+modules-left = powermenu arrow0 i3 arrow
 modules-center = music
 modules-right = arrow8 xkeyboard arrow7 memory arrow6 cpu arrow7 battery arrow6 volume arrow7 date arrow6
 
@@ -145,6 +146,7 @@ label-visible-foreground = ${colors.pink}
 label-visible-background = ${colors.background}
 
 label-focused = " %name% "
+label-focused-font = 3
 label-focused-foreground = ${colors.pink}
 label-focused-background = ${colors.background}
 
@@ -254,6 +256,40 @@ animation-charging-4 =
 animation-charging-framerate = 750
 
 
+[module/powermenu]
+type = custom/menu
+
+label-open = ""
+label-open-padding = 2
+label-open-foreground = ${colors.white}
+
+label-close = ""
+label-close-padding-left = 3
+label-close-foreground = ${colors.white}
+
+label-separator = "    "
+
+menu-0-0 = ""
+menu-0-0-foreground = ${colors.white}
+menu-0-0-exec = systemctl poweroff
+
+menu-0-1 = ""
+menu-0-1-foreground = ${colors.white}
+menu-0-1-exec = systemctl reboot
+
+menu-0-2 = " "
+menu-0-2-foreground = ${colors.white}
+menu-0-2-exec = systemctl hibernate
+
+menu-0-3 = ""
+menu-0-3-foreground = ${colors.white}
+menu-0-3-exec = i3lock-fancy
+
+menu-0-4 = " "
+menu-0-4-foreground = ${colors.white}
+menu-0-4-exec = i3-msg exit
+
+
 [settings]
 screenchange-reload = true
 
@@ -262,32 +298,13 @@ screenchange-reload = true
 ; Unused
 ; ############################################################
 ;
+
 [module/music]
 type = custom/script
 interval = 1
 
 label = %output:0:45:...%
 ;exec = ~/comfy_guration/scripts/polybar/poly_music.sh
-
-[module/powermenu]
-type = custom/menu
-expand-right = false
-
-label-open = "    "
-label-close = "      "
-label-close-foreground = ${colors.foreground-alt}
-label-separator = •
-
-menu-0-0 = "  "
-menu-0-0-exec = systemctl reboot
-menu-0-1 = "    "
-menu-0-1-exec = systemctl poweroff
-menu-0-2 = "    "
-menu-0-2-exec = i3-msg exit
-menu-0-3 = "    "
-menu-0-3-exec = systemctl hibernate
-menu-0-4 = "    "
-menu-0-4-exec = i3lock-fancy
 
 
 
