Updated compton config

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,37 +1,23 @@
-# mark-wmwin-focused = true;
-# mark-ovredir-focused = true;
-# # use-ewmh-active-win = true;
-# detect-rounded-corners = true;
-# detect-client-opacity = true;
-# refresh-rate = 0;
-# vsync = "none";
-# dbe = false;
+backend = "glx";
 
-# Drop shadows
-shadow = true;          # Enabled client-side shadows on windows
-no-dnd-shadow = true;   # Don't draw shadows on drag-and-drop windows
-# clear-shadow = true;    # Zero the part of the shadow's mask behind the window (experimental)
-# shadow-ignore-shaped = false;
+glx-no-rebind-pixmap = true;
+glx-no-stencil = true;
+glx-swap-method = 1;
 
-# [heavy shadow]
-#shadow-offset-x = -36;
-#shadow-offset-y = -4;
-#shadow-radius = 24;
-#shadow-opacity = 0.5;
-#shadow-red = 0.0;
-#shadow-blue = 0.0;
-#shadow-green = 0.0;
+no-fading-openclose = true;
 
-# [fading]
-# Fading transitions
-fading = false;
-fade-in-step = 0.2;
-fade-out-step = 0.08;
-no-fading-openclose = true
+shadow = true;
+shadow-ignore-shaped = true;
+
+unredir-if-possible = true;
+vsync = true
+xinerama-shadow-crop = true;
+
+
+
 shadow-exclude = [
   "class_g = 'Conky'",
   "class_g = 'i3-frame'",
-  # "class_g = 'Dunst'",
   "name = 'polybar-blur-noshadow'",
   "name = 'polybar-noblur-noshadow'",
   "class_g = 'Peek'",
@@ -41,26 +27,8 @@ shadow-exclude = [
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-opacity-rule = [
-  "100:class_g = 'Firefox' && argb",
-  "100:class_g = 'Thunderbird' && argb",
-  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
-
-# "80:class_g = 'Rofi'",
-# "80:name = 'Rofi'",
-# "50:name = 'Polybar tray window'",
-# "95:class_g = 'Atom'",
-#  "90:class_g = 'URxvt' && argb",
-# "95:class_g = 'Termite'",
-];
 
 blur-background-exclude = [
   "!(name = 'polybar-blur-shadow' || name = 'polybar-blur-noshadow' || name = 'polybar-backdrop' || class_g = 'URxvt' || class_g = 'Rofi' || class_g = 'Dunst' || class_g = 'Atom' || class_g = 'VSCodium' || class_g = 'Termite' || class_g = 'Conky' || name = 'Polybar tray window')"
 ]
 
-# Isolation mode
-# inactive-dim = 0.09;
-# inactive-opacity-override = true;
-# inactive-opacity = 0.95;
-
-# detect-rounded-corners = true;
