--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -2,6 +2,7 @@
 gtk-application-prefer-dark-theme=true
 gtk-button-images=0
 gtk-cursor-theme-name=breeze_cursors
+gtk-cursor-size=32
 gtk-fallback-icon-theme=ePapirus
 gtk-font-name=Roboto Black 10
 gtk-icon-theme-name=ePapirus
