--- a/.config/i3/config
+++ b/.config/i3/config
@@ -29,7 +29,7 @@ floating_modifier $mod
 
 bindsym $mod+Return exec "termite || i3-sensible-terminal"
 bindsym $mod+q kill
-bindsym Ctrl+l exec i3lock-fancy-rapid 4 4
+bindsym Ctrl+Shift+l exec i3lock-fancy-rapid 3 2
 
 # change focus
 bindsym $mod+$left focus left
@@ -215,7 +215,7 @@ mode "resize" {
 focus_follows_mouse no
 
 
-bindsym $mod+z exec "autorandr -c"
+bindsym $mod+z exec "autorandr -c -f"
 
 bindsym $mod+Ctrl+h move workspace to output right
 bindsym $mod+Ctrl+j move workspace to output down
