--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,4 +1,5 @@
 
+exec --no-startup-id  /home/gytis/autostart.sh
 # VARIABLES
 set $mod Mod4
 
@@ -25,7 +26,7 @@ set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
 
 ## KEYBINDINGS ##
-floating_modifier $mod 
+floating_modifier $mod
 
 bindsym $mod+Return exec "termite || i3-sensible-terminal"
 bindsym $mod+q kill
@@ -132,7 +133,7 @@ default_border pixel 0
 client.focused          $bg-color           $bg-color          $text-color          #00ff00
 client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
 client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color  
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color
 
 
 # Lockscreen
@@ -145,7 +146,7 @@ for_window [class="java-lang-Thread"] floating enable
 #bindsym $mod+Print exec shutter
 
 
-exec_always --no-startup-id ulauncher --hide-window
+exec --no-startup-id ulauncher --hide-window
 exec_always --no-startup-id setxkbmap -option caps:escape
 exec_always --no-startup-id setxkbmap -option altwin:swap_alt_win
 exec --no-startup-id nm-applet
