--- a/.config/systemd/user/polybar.service
+++ b/.config/systemd/user/polybar.service
@@ -1,14 +1,8 @@
 [Unit]
-Description=Polybar
-StartLimitInterval=5
-StartLimitBurst=1
+Description=Polybar system status bar
 
 [Service]
-Environment=DISPLAY=:0
 ExecStart=/usr/bin/polybar main
 Type=oneshot
-RemainAfterExit=false
 KillMode=process
 
-[Install]
-WantedBy=default.target
