--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,8 +28,6 @@ set $urgent-bg-color     #E53935
 ## KEYBINDINGS ##
 floating_modifier $mod
 
-bindsym $mod+Return exec "termite || i3-sensible-terminal"
-bindsym $mod+q kill
 bindsym Ctrl+Shift+l exec i3lock-fancy-rapid 3 2
 
 # change focus
@@ -95,32 +93,17 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
-# Audio
-bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume @DEFAULT_SINK@ +5%"
-bindsym XF86AudioLowerVolume exec "pactl set-sink-volume @DEFAULT_SINK@ -5%"
-bindsym XF86AudioMute exec "pactl set-sink-mute @DEFAULT_SINK@ toggle"
-
-# Brightness
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 
 #bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
 
-# Media control
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
-bindsym XF86AudioNext exec playerctl next bindsym XF86AudioPrev exec playerctl previous
 
 # Modes
 bindsym $mod+r mode "resize"
 bindsym $mod+Shift+g mode "$mode_gaps"
 
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-# bindsym $mod+d focus child
-
 
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you wish to exit i3?' -B 'Yes, exit i3' 'i3-msg exit'"
 
 ## Style
 smart_gaps on
@@ -136,19 +119,14 @@ client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-col
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color
 
 
-# Lockscreen
-#bindsym $mod+F2 exec ~/comfy_guration/scripts/i3lock.sh
 # Caps as Esc
 #exec --no-startup-id ~/comfy_guration/scripts/switch_caps_escape.sh
 # Screenshot
 for_window [class="java-lang-Thread"] floating enable
-#bindsym Print exec shutter -s -e -n -o '~/pictures/screenshots/%y_%m_%d_%T.png'
-#bindsym $mod+Print exec shutter
-
 
 exec --no-startup-id ulauncher --hide-window
 exec_always --no-startup-id setxkbmap -option caps:escape
-exec_always --no-startup-id setxkbmap -option altwin:swap_alt_win
+#exec_always --no-startup-id setxkbmap -option altwin:swap_alt_win
 exec --no-startup-id nm-applet
 
 bindsym $mod+b exec "firefox"
@@ -156,37 +134,12 @@ bindsym $mod+g exec "google-chrome-stable"
 ## MODES ##
 
 # Gaps
-set $mode_gaps Gaps: (o)uter, (i)nner
-set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps Gaps: 0 | + | - 
 
 mode "$mode_gaps" {
-        bindsym o      mode "$mode_gaps_outer"
-        bindsym i      mode "$mode_gaps_inner"
-        bindsym Escape mode "default"
-}
-
-mode "$mode_gaps_outer" {
-        bindsym plus  gaps outer current plus 5
-        bindsym minus gaps outer current minus 5
-        bindsym 0     gaps outer current set 0
-
-        bindsym Shift+plus  gaps outer all plus 5
-        bindsym Shift+minus gaps outer all minus 5
-        bindsym Shift+0     gaps outer all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-
-mode "$mode_gaps_inner" {
         bindsym plus  gaps inner current plus 5
         bindsym minus gaps inner current minus 5
         bindsym 0     gaps inner current set 0
-
-        bindsym Shift+plus  gaps inner all plus 5
-        bindsym Shift+minus gaps inner all minus 5
-        bindsym Shift+0     gaps inner all set 0
 
         bindsym Return mode "$mode_gaps"
         bindsym Escape mode "default"
@@ -215,8 +168,6 @@ mode "resize" {
 }
 focus_follows_mouse no
 
-
-bindsym $mod+z exec "autorandr -c -f"
 
 bindsym $mod+Ctrl+h move workspace to output right
 bindsym $mod+Ctrl+j move workspace to output down
