--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,6 +25,13 @@ set $text-color          #4f97d7
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
 
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color
+
+
 ## KEYBINDINGS ##
 floating_modifier $mod
 
@@ -36,21 +43,11 @@ bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
 
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
-
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # layout manipulation
 bindsym $mod+c split h
@@ -65,6 +62,17 @@ bindsym $mod+e layout toggle split
 bindsym $mod+Shift+x floating toggle
 bindsym $mod+x focus mode_toggle
 bindsym $mod+a focus parent
+
+# Reload/Restart
+bindsym $mod+Shift+c reload
+bindsym $mod+Shift+r restart
+
+# Modes
+bindsym $mod+r mode "resize"
+bindsym $mod+Shift+g mode "$mode_gaps"
+
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you wish to exit i3?' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # workspaces
 bindsym $mod+1 workspace $ws1
@@ -89,21 +97,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-# Reload/Restart
-bindsym $mod+Shift+c reload
-bindsym $mod+Shift+r restart
-
-
-#bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
-
-
-# Modes
-bindsym $mod+r mode "resize"
-bindsym $mod+Shift+g mode "$mode_gaps"
-
-
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you wish to exit i3?' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Ctrl+h move workspace to output right
+bindsym $mod+Ctrl+j move workspace to output down
+bindsym $mod+Ctrl+k move workspace to output up
+bindsym $mod+Ctrl+l move workspace to output left
 
 ## Style
 smart_gaps on
@@ -112,22 +109,12 @@ font pango:RobotoMono 9
 new_window pixel
 default_border pixel 0
 
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color
 
-
-# Caps as Esc
-#exec --no-startup-id ~/comfy_guration/scripts/switch_caps_escape.sh
-# Screenshot
 for_window [class="java-lang-Thread"] floating enable
+focus_follows_mouse no
 
-exec --no-startup-id ulauncher --hide-window
-exec_always --no-startup-id setxkbmap -option caps:escape
+#exec_always --no-startup-id setxkbmap -option caps:escape
 #exec_always --no-startup-id setxkbmap -option altwin:swap_alt_win
-exec --no-startup-id nm-applet
 
 bindsym $mod+b exec "firefox"
 bindsym $mod+g exec "google-chrome-stable"
@@ -157,19 +144,7 @@ mode "resize" {
         bindsym $up+Shift resize shrink height 3 px or 3 ppt
         bindsym $right+Shift resize grow width 3 px or 3 ppt
 
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
 }
-focus_follows_mouse no
-
-
-bindsym $mod+Ctrl+h move workspace to output right
-bindsym $mod+Ctrl+j move workspace to output down
-bindsym $mod+Ctrl+k move workspace to output up
-bindsym $mod+Ctrl+l move workspace to output left
