--- a/.config/i3/config
+++ b/.config/i3/config
@@ -32,16 +32,21 @@ bindsym $mod+Return exec "termite || i3-sensible-terminal"
 bindsym $mod+q kill
 bindsym Ctrl+Shift+l exec i3lock-fancy-rapid 3 2
 
-# change focus
-bindsym $mod+$left focus left
-bindsym $mod+$down focus down
-bindsym $mod+$up focus up
-bindsym $mod+$right focus right
+set $movemouse "sh -c 'eval `xdotool getactivewindow getwindowgeometry --shell`; xdotool mousemove $((X+WIDTH/2)) $((Y+HEIGHT/2))'"
 
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+
+
+
+# change focus
+bindsym $mod+$left focus left; exec $movemouse
+bindsym $mod+$down focus down; exec $movemouse
+bindsym $mod+$up focus up; exec $movemouse
+bindsym $mod+$right focus right; exec $movemouse
+
+bindsym $mod+Left focus left; exec $movemouse
+bindsym $mod+Down focus down; exec $movemouse
+bindsym $mod+Up focus up; exec $movemouse
+bindsym $mod+Right focus right; exec $movemouse
 
 # move focused window
 bindsym $mod+Shift+$left move left
