--- a/.config/i3/config
+++ b/.config/i3/config
@@ -116,7 +116,7 @@ for_window [class="java-lang-Thread"] floating enable
 focus_follows_mouse no
 
 #exec_always --no-startup-id setxkbmap -option caps:escape
-#exec_always --no-startup-id setxkbmap -option altwin:swap_alt_win
+exec_always --no-startup-id setxkbmap -option altwin:swap_alt_win
 
 bindsym $mod+b exec "firefox"
 bindsym $mod+g exec "google-chrome-stable"
