--- a/.config/autorandr/work/config
+++ b/.config/autorandr/work/config
@@ -7,16 +7,19 @@ off
 output VIRTUAL1
 off
 output DP2
+crtc 2
 mode 1920x1200
 pos 0x0
 rate 59.95
 output DP1
+crtc 1
 mode 1920x1200
 pos 1920x0
-primary
 rate 59.95
 output eDP1
+crtc 0
 mode 2880x1800
-pos 0x1200
+pos 1680x1200
+primary
 rate 59.99
 transform 0.750000,0.000000,0.000000,0.000000,0.750000,0.000000,0.000000,0.000000,1.000000
