--- a/.config/i3/config
+++ b/.config/i3/config
@@ -19,6 +19,14 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+
+## Style
+smart_gaps on
+font pango:RobotoMono 9
+
+new_window pixel
+default_border pixel 0
+
 set $bg-color 	         #424242
 set $inactive-bg-color   #424242
 set $text-color          #4f97d7
@@ -31,6 +39,7 @@ client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-co
 client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color
 
+focus_follows_mouse no
 
 ## KEYBINDINGS ##
 floating_modifier $mod
@@ -102,18 +111,9 @@ bindsym $mod+Ctrl+j move workspace to output down
 bindsym $mod+Ctrl+k move workspace to output up
 bindsym $mod+Ctrl+l move workspace to output left
 
-## Style
-smart_gaps on
-font pango:RobotoMono 9
-
-new_window pixel
-default_border pixel 0
-
-
 for_window [class="java-lang-Thread"] floating enable
-focus_follows_mouse no
 
-#exec_always --no-startup-id setxkbmap -option caps:escape
+exec_always --no-startup-id setxkbmap -option caps:escape
 #exec_always --no-startup-id setxkbmap -option altwin:swap_alt_win
 
 bindsym $mod+b exec "firefox"
