--- a/.config/systemd/user/compton.service
+++ b/.config/systemd/user/compton.service
@@ -1,11 +1,12 @@
 [Unit]
 Description=Compton compositor
+Restart=always
 PartOf=graphical-session.target
-BindsTo=xsession.service
 
 [Service]
+Environment="DISPLAY=:0"
 ExecStart=/usr/bin/compton --config /home/gytis/.config/compton.conf
 KillMode=process
 
 [Install]
-WantedBy=xsession.target
+WantedBy=graphical-session.target
